--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".E06CustomersActivity"></activity>
         <activity android:name=".E06JSONObject">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
