Renamed E06Customers to E06Customer; Modified AndroidManifest.xml to recognize activity_e06_customers_activity.xml; Coded displaying each Customer's info at E06CustomersActivity.java;

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity android:name=".E03NetworkStateChangeReceiver" />
         <activity android:name=".E04AndroidAsyncHttp" />
         <activity android:name=".E05JSONArray" />
+        <activity android:name=".E06CustomersActivity" />
 
         <activity android:name=".E06JSONObject">
             <intent-filter>
